samples/_failures_safe/1761506065_941a68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf9d9707.c: In function ‘main’:
./samples/SAFE/__tmp_cf9d9707.c:160:9: error: expected expression at end of input
  160 |         if (scanf("%d %d %d",
      |         ^~
./samples/SAFE/__tmp_cf9d9707.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf9d9707.c:160:9: error: expected declaration or statement at end of input
